# gitlab-exporter

./: .gitignore  Dockerfile  README.md  deployment.yaml  pyproject.toml  test.yaml
gitlab-exporter/: Chart.yaml  values.yaml
gitlab-exporter/templates/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
src/gitlab_prom_exporter/: __init__.py  app.py  metrics.py  schemas.py
