[project]
name = "gitlab-prom-exporter"
version = "0.1.0"
description = "GitLab Prometheus Exporter"
authors = [
    {name = "jvstme",email = "git@jvst.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
mypy = "^1.14.1"

[tool.ruff.lint]
select = ['E', 'F', 'I' , 'W', 'UP']